--- a/QueueManager/app/src/main/res/layout/menu.xml
+++ b/QueueManager/app/src/main/res/layout/menu.xml
@@ -13,11 +13,20 @@
         android:layout_centerHorizontal="true" />
 
     <Button
+        android:id="@+id/queuelistButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/queuelistButton"
+        android:layout_below="@+id/qrButton"
+        android:layout_alignLeft="@+id/qrButton"
+        android:layout_alignStart="@+id/qrButton" />
+
+    <Button
         android:id="@+id/settingsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/settings"
-        android:layout_below="@+id/qrButton"
+        android:layout_below="@+id/queuelistButton"
         android:layout_alignLeft="@+id/qrButton"
         android:layout_alignStart="@+id/qrButton" />
 
