--- a/App/QueueManager/app/src/main/res/layout/readerqr.xml
+++ b/App/QueueManager/app/src/main/res/layout/readerqr.xml
@@ -1,5 +1,4 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -11,19 +10,7 @@
         <ImageButton
             android:id="@+id/btReader"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_width="162dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/codeFormat"
-            android:layout_gravity="center_vertical" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/codeResult"
-            android:layout_gravity="center_vertical" />
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 </RelativeLayout>
