--- a/App/QueueManager/app/src/main/res/layout/main.xml
+++ b/App/QueueManager/app/src/main/res/layout/main.xml
@@ -1,18 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="es.ull.esit.queuemanager.MainActivity">
-
-    <TextView
-        android:id="@+id/app_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/title"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="83dp" />
+    android:layout_height="match_parent">
 
     <Button
         android:id="@+id/enter"
@@ -20,8 +8,19 @@
         android:layout_height="wrap_content"
         android:text="@string/enter"
         android:layout_gravity="center_vertical"
-        android:layout_below="@+id/app_title"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="177dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/logo"
+        android:background="@mipmap/ic_launcher"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/enter"
+        android:layout_alignStart="@+id/enter"
+        android:layout_marginTop="63dp"
+        android:layout_alignRight="@+id/enter"
+        android:layout_alignEnd="@+id/enter" />
 
 </RelativeLayout>
