--- a/App/QueueManager/app/src/main/res/layout/settings.xml
+++ b/App/QueueManager/app/src/main/res/layout/settings.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Ajustes"
+        android:textColor="@color/gold"
         android:id="@+id/textView"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="58dp"
@@ -18,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Vibración"
-        android:id="@+id/checkBox2"
+        android:id="@+id/checkBoxVibration"
         android:layout_gravity="center_horizontal"
         android:checked="true"
         android:layout_below="@+id/textView"
@@ -26,14 +31,36 @@
         android:layout_alignStart="@+id/textView"
         android:layout_marginTop="64dp" />
 
+    <SeekBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/barVibration"
+        android:max="300"
+        android:progress="5"
+        android:indeterminate="false"
+        android:layout_alignLeft="@+id/checkBoxVibration"
+        android:layout_alignStart="@+id/checkBoxVibration"
+        android:layout_below="@+id/checkBoxVibration" />
+
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sonido"
-        android:id="@+id/checkBox"
+        android:id="@+id/checkBoxSound"
         android:layout_gravity="center_horizontal"
         android:checked="true"
-        android:layout_below="@+id/checkBox2"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignStart="@+id/textView" />
+        android:layout_centerVertical="true"
+        android:layout_alignRight="@+id/textView"
+        android:layout_alignEnd="@+id/textView" />
+
+    <SeekBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/barSound"
+        android:max="300"
+        android:progress="5"
+        android:indeterminate="false"
+        android:layout_alignLeft="@+id/checkBoxSound"
+        android:layout_alignStart="@+id/checkBoxSound"
+        android:layout_below="@+id/checkBoxSound" />
 </RelativeLayout>
