--- a/App/QueueManager/app/src/main/res/values/styles.xml
+++ b/App/QueueManager/app/src/main/res/values/styles.xml
@@ -1,11 +1,16 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/gold</item>
     </style>
 
+    <!-- The button styles -->
+    <style name="buttonStyle">
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:background">#80000000</item>
+    </style>
 </resources>
